# quantlab

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: momentum_vs_meanrev.py
src/quantlab/: __init__.py  backtest.py  costs.py  data.py  metrics.py  strategy.py
tests/: test_backtest.py  test_costs.py  test_metrics.py
